--- a/plots.ipynb
+++ b/plots.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "Histograms :\n",
     "\n",
-    "Used to study the distribution of the data in a dataset."
+    "Used to study the distribution of the data in a dataset"
    ]
   }
  ],
